Add pm2, log4js, async setup, update README for working with pm2

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,8 @@
 NODE_ENV=development
-EXPRESS_PORT=3333
+# for pre-production environments, it can be helpful to run node itself in `production,
+# while still allowing application logic to run as if it's in development
+DEPLOY_ENV=development
+EXPRESS_PORT=4444
 
 SSL_PRIVATE_KEY_PATH = mkcert/localhost-key.pem
 SSL_CERTIFICATE_PATH = mkcert/localhost.pem
