--- a/package.json
+++ b/package.json
@@ -10,13 +10,26 @@
     "body-parser": "^1.20.0",
     "dotenv": "16.0.1",
     "express": "^4.18.1",
+    "log4js": "^6.5.2",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "serve-favicon": "^2.5.0"
   },
   "scripts": {
-    "build": "next build",
-    "start": "node index.js"
+    "//": [
+      "this style of comments:",
+      "https://stackoverflow.com/questions/14221579/how-do-i-add-comments-to-package-json-for-npm-install",
+      "the wait-ready flag for pm2 assumes some matching application code (expects process.send('ready'))",
+      "https://pm2.keymetrics.io/docs/usage/signals-clean-restart/"
+    ],
+    "postinstall": "pm2 install pm2-graceful-intercom",
+    "start": "pm2 start index.js --name pm2_nextjs_express --wait-ready --kill-timeout 3000 -i 2",
+    "stop": "pm2 stop pm2_nextjs_express",
+    "reload": "pm2 reload pm2_nextjs_express",
+    "local": "DEPLOY_ENV=local NODE_ENV=development pm2 start index.js --name pm2_nextjs_express --wait-ready --watch -i 2",
+    "debug": "pm2 start index.js --name pm2_nextjs_express_debug --wait-ready --kill-timeout 3000 --node-args='--inspect-brk'",
+    "stop_debug": "pm2 delete pm2_nextjs_express_debug",
+    "build": "next build"
   }
 }
