--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs_express_template",
+  "name": "pm2_nextjs_express_template",
   "version": "1.0.0",
-  "description": "Template for a NextJS+ExpressJS web app",
+  "description": "Template for a PM2+NextJS+ExpressJS web app",
   "main": "index.js",
-  "repository": "git@github.com:alexey-dc/nextjs_express_template.git",
-  "author": "alexey-dc <alexey.chernikov.it@gmail.com>",
+  "repository": "git@github.com:alexey-dc/pm2_nextjs_express_template.git",
+  "author": "alexey-dc <alexey.opensource@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -21,7 +21,8 @@
       "this style of comments:",
       "https://stackoverflow.com/questions/14221579/how-do-i-add-comments-to-package-json-for-npm-install",
       "the wait-ready flag for pm2 assumes some matching application code (expects process.send('ready'))",
-      "https://pm2.keymetrics.io/docs/usage/signals-clean-restart/"
+      "https://pm2.keymetrics.io/docs/usage/signals-clean-restart/",
+      "For an explanation of pm2-graceful-intercom, see app/blib/log.js"
     ],
     "postinstall": "pm2 install pm2-graceful-intercom",
     "start": "pm2 start index.js --name pm2_nextjs_express --wait-ready --kill-timeout 3000 -i 2",
